--- a/package.json
+++ b/package.json
@@ -61,5 +61,5 @@
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3"
   },
-  "packageManager": "bun@1.2.14"
+  "packageManager": "npm@^11.4.1"
 }
