--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "3dmol": "^2.4.2",
     "@next/env": "^15.4.0-canary.51",
     "@nivo/scatterplot": "^0.99.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -21,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -30,14 +30,15 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@rdkit/rdkit": "^2025.3.2-1.0.0",
     "@tanstack/react-table": "^8.21.3",
+    "3dmol": "^2.4.2",
     "ag-grid-react": "^33.3.0",
     "browserify-fs": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
-    "ketcher-core": "^3.2.0",
-    "ketcher-react": "^3.2.0",
-    "ketcher-standalone": "^3.2.0",
+    "ketcher-core": "^3.8.0",
+    "ketcher-react": "^3.8.0",
+    "ketcher-standalone": "^3.8.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
